--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,20 +6,20 @@
 #    By: abenheni <abenheni@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/26 14:41:22 by abenheni          #+#    #+#              #
-#    Updated: 2023/09/28 12:08:48 by abenheni         ###   ########.fr        #
+#    Updated: 2023/09/28 12:18:11 by abenheni         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fixed
 CC = c++
 RM = rm -f
-CFLAGS = -Wall -Wextra -Werror -std=c++98
-SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp
+CFLAGS = #-Wall -Wextra -Werror -std=c++98
+SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp
 OBJ = $(SRC:%.cpp=%.o)
 all : $(NAME)
 $(NAME) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ)  -o $(NAME)
-%.o : %.cpp Animal.hpp Dog.hpp Cat.hpp
+%.o : %.cpp Animal.hpp Dog.hpp Cat.hpp Brain.hpp
 	$(CC) $(CFLAGS)  -c $< -o $@ 
 clean :
 	$(RM) $(OBJ)
