--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: abenheni <abenheni@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/29 10:44:06 by abenheni          #+#    #+#              #
-#    Updated: 2023/09/29 12:20:21 by abenheni         ###   ########.fr        #
+#    Updated: 2023/09/29 14:17:21 by abenheni         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,12 +14,12 @@ NAME = fixed
 CC = c++
 RM = rm -f
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-SRC =  main.cpp AMateria.cpp Cure.cpp Ice.cpp ICharacter.cpp
+SRC =  main.cpp AMateria.cpp Cure.cpp Ice.cpp ICharacter.cpp IMateriaSource.cpp
 OBJ = $(SRC:%.cpp=%.o)
 all : $(NAME)
 $(NAME) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ)  -o $(NAME)
-%.o : %.cpp AMateria.hpp Cure.hpp Ice.hpp ICharacter.hpp
+%.o : %.cpp AMateria.hpp Cure.hpp Ice.hpp ICharacter.hpp IMateriaSource.hpp
 	$(CC) $(CFLAGS)  -c $< -o $@ 
 clean :
 	$(RM) $(OBJ)
