--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -6,15 +6,15 @@
 #    By: abenheni <abenheni@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/29 10:44:06 by abenheni          #+#    #+#              #
-#    Updated: 2023/09/29 19:41:37 by abenheni         ###   ########.fr        #
+#    Updated: 2023/09/30 17:17:50 by abenheni         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fixed
 CC = c++
 RM = rm -f
-CFLAGS = #-Wall -Wextra -Werror -std=c++98
-SRC =  main.cpp AMateria.cpp Cure.cpp Ice.cpp  IMateriaSource.cpp Character.cpp
+CFLAGS = -Wall -Wextra -Werror -std=c++98
+SRC =  main.cpp AMateria.cpp Cure.cpp Ice.cpp  MateriaSource.cpp Character.cpp
 OBJ = $(SRC:%.cpp=%.o)
 all : $(NAME)
 $(NAME) : $(OBJ)
