--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,14 +6,14 @@
 #    By: abenheni <abenheni@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/26 14:41:22 by abenheni          #+#    #+#              #
-#    Updated: 2023/09/28 12:18:11 by abenheni         ###   ########.fr        #
+#    Updated: 2023/09/30 17:18:07 by abenheni         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fixed
 CC = c++
 RM = rm -f
-CFLAGS = #-Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp
 OBJ = $(SRC:%.cpp=%.o)
 all : $(NAME)
