--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: abenheni <abenheni@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/26 14:41:22 by abenheni          #+#    #+#              #
-#    Updated: 2023/09/30 17:18:07 by abenheni         ###   ########.fr        #
+#    Updated: 2023/10/01 17:57:28 by abenheni         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,12 +14,12 @@ NAME = fixed
 CC = c++
 RM = rm -f
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp
+SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp  WrongAnimal.cpp WrongCat.cpp
 OBJ = $(SRC:%.cpp=%.o)
 all : $(NAME)
 $(NAME) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ)  -o $(NAME)
-%.o : %.cpp Animal.hpp Dog.hpp Cat.hpp Brain.hpp
+%.o : %.cpp Animal.hpp Dog.hpp Cat.hpp Brain.hpp WrongAnimal.hpp WrongCat.hpp
 	$(CC) $(CFLAGS)  -c $< -o $@ 
 clean :
 	$(RM) $(OBJ)
